# rokea_dynamic_control

./: CMakeLists.txt  log.txt
assests/: __init__.py  scene.xml  xMatePro7_4_XML.xacro  xacro2urdf.py  xmate_pro7 copy.urdf  xmate_pro7.urdf  xmate_pro7_native copy.xml  xmate_pro7_native.xml
assests/xMateER7p/: readme.md
diag_states/: CMakeLists.txt  check_state.cpp  mode_test.cpp
examples/: drag_test.cpp  joint_impedance_move.cpp  torque_control.cpp
my_research/: CMakeLists.txt  calc_dynamics.cpp  data_recorder.cpp  get_states.cpp  hello.cpp  pd_ctl.cpp  pd_gravity_control.cpp  scanner.cpp  t_ctl.cpp  zero_gravity.cpp
